<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.GameDetailActivity">

    <TextView
            android:id="@+id/game_info"
            android:text="@string/game_info"
            android:textSize="40sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageButton
            android:id="@+id/game_image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_info"
            android:layout_margin="10dp"
            android:contentDescription="@string/game_image_des"/>

    <TextView
            android:id="@+id/name"
            android:textSize="18sp"
            android:textColor="@color/color_text"
            android:textStyle="bold"
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            app:layout_constraintLeft_toRightOf="@+id/game_image"
            app:layout_constraintTop_toTopOf="@+id/game_image"/>

    <TextView
            android:id="@+id/game_name"
            android:textSize="18sp"
            android:textColor="@color/color_text"
            android:text="@string/game_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toRightOf="@+id/name"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="@+id/game_image"/>

    <TextView
            android:id="@+id/type"
            android:textSize="18sp"
            android:textColor="@color/color_text"
            android:textStyle="bold"
            android:text="@string/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintLeft_toRightOf="@+id/game_image"
            app:layout_constraintTop_toBottomOf="@+id/name"/>

    <TextView
            android:id="@+id/game_type"
            android:textSize="18sp"
            android:textColor="@color/color_text_sec"
            android:text="@string/game_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/type"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toBottomOf="@+id/name"/>

    <TextView
            android:id="@+id/nb_players"
            android:textSize="18sp"
            android:textColor="@color/color_text"
            android:textStyle="bold"
            android:text="@string/nb_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintLeft_toRightOf="@+id/game_image"
            app:layout_constraintTop_toBottomOf="@+id/type"/>

    <TextView
            android:id="@+id/game_nb"
            android:textSize="18sp"
            android:textColor="@color/color_text_sec"
            android:text="@string/game_nb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/nb_players"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toBottomOf="@+id/type"/>

    <TextView
            android:id="@+id/year"
            android:textSize="18sp"
            android:textColor="@color/color_text"
            android:textStyle="bold"
            android:text="@string/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintLeft_toRightOf="@+id/game_image"
            app:layout_constraintTop_toBottomOf="@+id/nb_players"/>

    <TextView
            android:id="@+id/game_year"
            android:textSize="18sp"
            android:textColor="@color/color_text_sec"
            android:text="@string/game_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/year"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toBottomOf="@+id/nb_players"/>


    <TextView
            android:id="@+id/game_description"
            android:textSize="18sp"
            android:textColor="@color/color_text_sec"
            android:text="@string/description"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingLeft="10dp"
            android:layout_marginTop="60dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            app:layout_constraintTop_toBottomOf="@+id/game_image"/>

    <Button
            android:id="@+id/button_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/game_description"
            android:layout_marginTop="50dp"/>

    <EditText
            android:id="@+id/input_name"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/button_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="10dp"
            android:inputType="text"
            android:hint="@string/enter_your_nickname"
            android:visibility="invisible"
            tools:ignore="Autofill"
    />

    <ImageButton
            android:id="@+id/icon_run"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            app:layout_constraintLeft_toRightOf="@id/input_name"
            app:layout_constraintTop_toTopOf="@id/input_name"
            app:layout_constraintBottom_toBottomOf="@id/input_name"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/ic_run_arrow"
            android:visibility="invisible"
            android:contentDescription="run"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"/>

</androidx.constraintlayout.widget.ConstraintLayout>