<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.HangmanActivity">

    <TextView
            android:id="@+id/lives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            android:text="@string/str_lives"
            android:textStyle="bold"
            android:textSize="30sp"
    />

    <ImageView
            android:id="@+id/hangman_icon"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="50dp"
            android:contentDescription="hangman"
            android:src="@drawable/hangman11"
    />

    <TextView
            android:id="@+id/word_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/hangman_icon"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/empty_word"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
    />

    <EditText
            android:id="@+id/chosen_letter"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/word_display"
            app:layout_constraintRight_toLeftOf="@id/button_ok"
            android:inputType="text"
            android:layout_margin="20dp"
            android:hint="@string/enter_your_letter"
            tools:ignore="Autofill"/>

    <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_marginStart="20dp"
            app:layout_constraintLeft_toRightOf="@id/chosen_letter"
            app:layout_constraintTop_toTopOf="@id/chosen_letter"
            app:layout_constraintBottom_toBottomOf="@id/chosen_letter"/>

    <TextView
            android:id="@+id/tested_letters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/chosen_letter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="top"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>